Fixed h2 align

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,10 @@ h1 {
     text-align: center;
 }
 
+h2{
+    text-align: center;
+}
+
 img {
     border-radius: 50%;
     display: block;
